# terminal_quest

./: .gitignore  .level0_hint.md  CHANGELOG  LICENSE  MANIFEST.in  README.md  TerminalQuest.md  build_pypi.sh  install_conda_packages.sh  install_packages.sh  level0.md  level1.md  pyproject.toml  setup.cfg  setup.py  terminal_quest.py
.github/workflows/: build.yml  ci.yml  publish.yml
conda_recipes/1.0/: meta.yaml
conda_recipes/1.1/: meta.yaml
conda_recipes/dev/: meta.yaml
terminal_quest/: __init__.py  __main__.py  compat.py  pizzazz.py  terminal_quest.py
terminal_quest/mds/: .level0_hint.md  .level1_hint.md  .level2_hint.md  .level3_hint.md  .level4_hint.md  .level5_hint.md  .level6_hint.md  .level7_hint.md  .level8_hint.md  level1.md  level2.md  level4.md  level5.md  level6.md  level7.md  level8.md  level9.md
terminal_quest_src/: TerminalQuest.md  conda_setup.sh
terminal_quest_src/terminal_quest/: __init__.py  terminal_quest.py
terminal_quest_src/terminal_quest/mds/: .level9_hint.md  level0.md  level2.md  level3.md
tests/: conftest.py  test_compat.py  test_pizzazz.py  test_terminal_quest.py
